> [FILE:create_map.py] Creating a option to generate a trace for all variables - checkout the label [CHANGE-DOT] in program
> [FILE:create_map.py] Adding the type of the variables in the trace map